--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -61,6 +61,11 @@ for (const cat of sortedCategories) {
 			.tree-category:hover {
 				background: var(--terminal-current-line);
 			}
+			.tree-category-hover:hover .tree-popup,
+			.tree-category-hover:focus-within .tree-popup,
+			.tree-popup:hover {
+				display: block;
+			}
 			.tree-popup {
 				display: none;
 				position: absolute;
@@ -74,9 +79,6 @@ for (const cat of sortedCategories) {
 				padding: 0.7em 1em;
 				z-index: 10;
 				font-size: 1em;
-			}
-			.tree-category-hover:hover .tree-popup {
-				display: block;
 			}
 			.tree-line {
 				color: var(--terminal-green);
