--- a/src/layouts/NotesPost.astro
+++ b/src/layouts/NotesPost.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import { Image } from 'astro:assets';
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<'notes'>['data'];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
