--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,7 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 
-const posts = await getCollection('blog');
+const posts = await getCollection('notes');
 
 // Group posts by category (first folder in id)
 const grouped = {};
@@ -112,7 +112,7 @@ for (const cat of sortedCategories) {
 							{grouped[cat].map((post, idx, arr) => (
 								<div>
 									<span class="tree-line">{idx === arr.length - 1 ? '┗⮕' : '┝⮕'}</span>
-									<a class="tree-link" href={`/blog/${post.id}/`}>{post.data.title}</a>
+									<a class="tree-link" href={`/notes/${post.id}/`}>{post.data.title}</a>
 								</div>
 							))}
 						</div>
