--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -111,7 +111,7 @@ for (const cat of sortedCategories) {
 						<div class="tree-popup">
 							{grouped[cat].map((post, idx, arr) => (
 								<div>
-									<span class="tree-line">{idx === arr.length - 1 ? '┗⮕' : '┝⮕'}</span>
+									<span class="tree-line">{idx === arr.length - 1 ? '↳' : '↳'}</span>
 									<a class="tree-link" href={`/notes/${post.id}/`}>{post.data.title}</a>
 								</div>
 							))}
