--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,11 +36,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 			<h2>❯ TODO:</h2>
 			<ul>
-				<li><input type="checkbox" disabled />Notes::Need to sort 150GB of chaos</li>
-				<li><input type="checkbox" disabled />Notes::Networking::Rewrite/Reorginize old ones</li>
-				<li><input type="checkbox" disabled />Notes::Linux::Rewrite/Continue from last checkpoint</li>
-				<li><input type="checkbox" disabled />Notes::Scripting::Start taking notes </li>
-				<li><input type="checkbox" disabled />Write-Ups::Create a page for that</li>
+				<li><input type="checkbox" checked disabled />Notes::Need to sort 150GB of chaos</li>
+				<li><input type="checkbox" checked disabled />Notes::How to Get Started</li>
+				<li><input type="checkbox" disabled />Notes::Networking</li>
+				<li><input type="checkbox" disabled />Notes::Linux</li>
+				<li><input type="checkbox" disabled />Notes::Scripting</li>
 			</ul>
 
 			<!-- RSS Feed Guide -->
