--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -15,8 +15,7 @@ const categoryOrder = [
 	'Linux',
 	'Home-Lab',
 	'Scripting',
-	'Offensive',
-	'To-Sort'
+	'Offensive'
 ];
 
 // Group posts by category (first folder in id)
