--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,6 +82,7 @@ h1, h2{
  h3, h4 {
     color: var(--terminal-purple);
     font-family: 'Fira Code', monospace;
+    padding-bottom: 0.3em;
 }
 
 h1 {
