--- a/src/layouts/NotesPost.astro
+++ b/src/layouts/NotesPost.astro
@@ -96,6 +96,15 @@ const { title, pubDate, updatedDate, heroImage } = Astro.props;
 	</head>
 
 	<body>
+		<!-- Background Decorations -->
+		<div class="hacker-symbols"></div>
+		<div class="scan-line"></div>
+		<div class="circuit-pattern"></div>
+		<div class="corner-decoration top-left"></div>
+		<div class="corner-decoration top-right"></div>
+		<div class="corner-decoration bottom-left"></div>
+		<div class="corner-decoration bottom-right"></div>
+		
 		<Header />
 		<main>
 			<article>
