--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -87,9 +87,18 @@ const projects = (await getCollection('projects')).sort(
 		</style>
 	</head>
 	<body>
+		<!-- Background Decorations -->
+		<div class="hacker-symbols"></div>
+		<div class="scan-line"></div>
+		<div class="circuit-pattern"></div>
+		<div class="corner-decoration top-left"></div>
+		<div class="corner-decoration top-right"></div>
+		<div class="corner-decoration bottom-left"></div>
+		<div class="corner-decoration bottom-right"></div>
+		
 		<Header />
 		<main>
-			<h1>Projects</h1>
+			<h1>❯ Projects</h1>
 			<section>
 				<ul>
 					{
@@ -97,12 +106,12 @@ const projects = (await getCollection('projects')).sort(
 							<li>
 								<a href={`/projects/${project.id}/`}>
 									{project.data.heroImage && (
-										<Image width={720} height={360} src={project.data.heroImage} alt="" />
+										<Image width={400} height={200} src={project.data.heroImage} alt="" />
 									)}
 									<h4 class="title">{project.data.title}</h4>
-									<p class="date">
+									<time class="date">
 										<FormattedDate date={project.data.pubDate} />
-									</p>
+									</time>
 								</a>
 							</li>
 						))
